# lys

./: .gitignore  Cargo.toml  Lys  README.md  commit.hc  lys.1  lys.toml  lysrc  make.hc  publish.hc  site.webmanifest  syl  uvd.toml
.github/workflows/: rust.yml
capsule/: Cargo.toml
lys/: Cargo.toml
lys/src/: chat.rs  commit.rs  crypto.rs  db.rs  import.rs  main.rs  shell.rs  todo.rs  tree.rs  utils.rs  vcs.rs  web.rs
plan/: Cargo.toml
plan/src/: lib.rs  main.rs
shells/: lys.fish  syl.fish  uvd.fish
silex/: Cargo.toml
silexium/: CONTRACT.md  Cargo.toml  INGEST.md  README.md  SPEC.md
silexium/examples/: manifest.json
silexium/examples/payloads/: author.json  server.json  tests.json
silexium/fixtures/: README.md  manifest.json  release.toml
silexium/fixtures-fake/: .gitignore  README.md
silexium/fixtures-real/: .gitignore  README.md  proof.env.example
silexium/fixtures/ots/: author.ots  server.ots  tests.ots
silexium/fixtures/payloads/: author.json  server.json  tests.json
silexium/fixtures/tsa/: author.tsr  server.tsr  tests.tsr
silexium/scripts/: gen_fake_release.sh  mock_verify.sh  run_proof_test.sh
silexium/src/: canon.rs  main.rs
silexium/src/silex/: config.rs  db.rs  ingest.rs  log.rs  mod.rs  proofs.rs  types.rs
silexium/tests/: ingest_fixtures.rs
src/: commit.rs  crypto.rs  db.rs  git.rs  import.rs  main.rs  mount.rs  shell.rs  todo.rs  tree.rs  utils.rs  vcs.rs  web.rs
src/init/: mod.rs
src/run/: mod.rs
src/seal/: mod.rs
src/share/: mod.rs
syl/: Cargo.toml
uvd/: Cargo.toml  uvd.json
uvd/hooks/package/: dmg.sh  exe.sh
uvd/src/: crypto.rs  main.rs  tree.rs  utils.rs
