[package]
name = "lys"
version = "0.1.0"
edition = "2024"
description = "a future package manager"
repository = "https://github.com/hackia/lys"
readme = "README.md"
license = "AGPL-3.0"
categories = ["command-line-utilities"]
keywords = ["pkgs"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
