[package]
name = "lys"
version = "0.2.0"
edition = "2024"
description = "A secure local first vcs"

[dependencies]
axum = "0.8.8"
blake3 = "1.8.3"
breathes = "0.1.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.55"
crossterm = "0.29.0"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
inquire = { version = "0.9.2", features = ["date", "editor", "console"] }
similar = "2.7.0"
sqlite = "0.37.0"
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
git2 = "0.20.3"
flate2 = "1.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
content_inspector = "0.2.4"
nix = { version = "0.31.1", features = ["env", "mount", "net", "process", "pthread", "term", "time", "uio", "user"] }
textwrap = "0.16.2"
anyhow = "1.0.100"
indicatif = "0.18.3"
miniz_oxide = "0.9.0"
dashmap = "6.1.0"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
ratatui = { version = "0.30.0", features = ["all-widgets"] }
tui-textarea = { version = "0.7.0", features = ["search"] }

[[bin]]
name = "syl"
src = "src/syl.rs"
