[package]
name = "plan"
version = "0.1.0"
edition = "2024"
authors = ["Saigo Ekitae <saigoekitae@gmail.com>"]
description = "s"
[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
rayon = "1.11.0"
blake3 = "1.8.3"
hex = "0.4.3"
tempfile = "3.25.0"
ignore = "0.4.25"
clap = "4.5.59"
sha2 = "0.11.0-rc.5"
num_cpus = "1.17.0"
sysinfo = { version = "0.38.2", features = ["default", "multithread", "serde", "system", "windows"] }

[target.'cfg(unix)'.dependencies]
rlimit = "0.11.0" # Pour gérer les limites OS sur Linux/macOS
