[package]
name = "silexium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
ed25519-dalek = "3.0.0-pre.6"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlite = "0.37.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
